@@ -199,6 +199,10 @@ size_t iwpool_allocated_size(IWPOOL *pool) {
   return pool->asiz;
 }
 
+size_t iwpoll_used_size(IWPOOL *pool) {
+  return pool->usiz;
+}
+
 void iwpool_destroy(IWPOOL *pool) {
   if (!pool) {
     return;
